2007-03-10 Chris Morley

	* src/formats/inchiformat.cpp(WriteMolecule): For 2D molecules
	use a modified CalculateChiralVolume() to add psueudo z
	coordinates, rather than using InChI's 2D bond stereo method.
	I think we are close to getting the InChI write stereochemistry
	right at last, but systematic checking needed.
	
	* include/openbabel/chiral.h, src/chiral.cpp
	(CalculateChiralVolume): add backwards-compatible extra 
	parameter to facilitate use of pseudo z coordinates.
	
	* src/formats/cansmilesformat.cpp(BuildCanonTree): two more
	instances of the bug corrected yesterday.

2007-03-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure, configure.in: Bump for 2.1.0b7 snapshot.

	* Doxyfile: Bump version for eventual 2.1.0 release.

	* src/*, src/formats/*: Add OBGenericData::SetOrigin calls to
	provide attribution to sources of data: file input, user input,
	perceived, etc.

	* tools/obfit.cpp: Likewise.

2007-03-09  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/logp.h, src/logp.cpp, src/Makefile.am,
	src/Makefile.in, data/LogP.txt:
	Added OBLogP class (see mailing list).

	* tools/obprop.cpp: Added LogP property.

2007-03-09 Chris Morley

	* src/formats/cansmilesformat.cpp(BuildCanonTree):The insert in 
	line 893 invalidates iterator ai. Add a line so that the subsequent
	test (outside the loop) does not crash my debug build but always
	is false - no push_back. Solves bug 1650790. I hope that Craig or
	somebody can check whether the cannonical SMILES output is still ok.

2007-03-09  Donald E. Curtis <dcurtis3@sourceforge.net>

	* include/obiter.h: added deconstructor functions.  Lack of these can
	cause problems when using the FOR_*_OF_* macros.

2007-03-08  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* forcefield.h/cpp: documentation update.

2007-03-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fix problem with "invented" stereo