@@ -87,7 +87,7 @@
 [C](=C)(c)a	0.264
 [CH](=C)a	0.264
 [C]=c	0.264
-[CX4][!#6;!#7;!#8;!#9;!#15;!#16;!#17;!#35;!#53]	0.2148
+[CX4][!#6;!#7;!#8;!#9;!#15;!#16;!#17;!#35;!#53;!#1] 0.2148
 [#7]	-0.4806
 [NH2+0]A	-1.019
 [NH+0](A)A	-0.7096
@@ -124,7 +124,7 @@
 [O](C)C	-0.0684
 [OH0](C)[A!#6]	-0.0684
 [OH0]([A!#6])[A!#6]	-0.0684
-[O](A)a	-0.4195
+[O]([A;!#1])a	-0.4195
 [O](a)a	-0.4195
 [O]=[#8]	0.0335
 [O]=[#7]	0.0335
